--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://waseem-ayman.github.io/GSG-APIs",
+  "homepage": "https://waseem-ayman.github.io/",
   "name": "posts_apis",
   "version": "0.1.0",
   "private": true,
